Removed email and simplified savePerson
