# docs/swagger.json
@@ -36,7 +36,7 @@
             "post": {
                 "description": "Creates person using json",
                 "consumes": [
-                    "application/json"
+                    "application/x-www-form-urlencoded"
                 ],
                 "tags": [
                     "Person"
@@ -44,13 +44,11 @@
                 "summary": "Creates person",
                 "parameters": [
                     {
-                        "description": "assignment Request",
-                        "name": "models.Person",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Person"
-                        }
+                        "type": "string",
+                        "description": "username",
+                        "name": "username",
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -157,9 +155,6 @@
             "type": "object",
             "properties": {
                 "created_at": {
-                    "type": "string"
-                },
-                "email": {
                     "type": "string"
                 },
                 "gists": {
